tests/sumo/devices/rerouting/personTrip/errors/access_double_invalid/errors.sumo
Error: Duplicate access on lane 'accessA_0' for stop 's1'
Quitting (on error).
